--- a/convex/tsconfig.json
+++ b/convex/tsconfig.json
@@ -20,6 +20,6 @@
     "isolatedModules": true,
     "noEmit": true
   },
-  "include": ["./**/*"],
+  "include": ["./**/*", "contacts.js"],
   "exclude": ["./_generated"]
 }
