--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "date-fns": "^4.1.0",
     "inngest": "^3.49.3",
     "lucide-react": "^0.562.0",
-    "next": "16.1.3",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "react-spinners": "^0.17.0",
+    "recharts": "^3.7.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.6"
